fix carousel jumps bug and specify a fixed height for carousel-inner

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,13 @@ h3 {
     padding: 7% 15%;
 }
 
+.carousel-inner {
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    height: 360px !important;
+}
+
 .text-white {
     font-family: "Montserrat";
     font-weight: 700;
@@ -159,6 +166,8 @@ h3 {
 }
 
 
+
+
 @media (max-width: 1028px) {
 
     .col-12 {
@@ -214,17 +223,17 @@ h3 {
     }
 
     .text-white {
-        font-size: 1.4rem;
+        font-size: 1rem;
     }
 
     .testimonial_image {
-        width: 15%;
+        width: 10%;
         margin-left: 1px;
         margin-right: 1px;
     }
 
     .press_images {
-        width: 26%;
+        width: 14%;
     }
 
     #pricing p {
@@ -241,6 +250,10 @@ h3 {
 
     #testimonials {
         padding: 7% 12%
+    }
+
+    .carousel-inner {
+        height: 200px !important;
     }
 
     #press {
@@ -265,4 +278,6 @@ h3 {
     #footer i {
         padding: 3% 3.5% 3%;
     }
+
+
 }
